--- a/package.json
+++ b/package.json
@@ -3,26 +3,40 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "0.51.0",
-    "react-native-camera": "^0.12.0",
-    "react-native-cookie": "^0.2.0",
-    "react-native-elements": "^0.18.5",
+    "@react-native-community/cookies": "^4.0.1",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "react": "16.13.1",
+    "react-native": "0.63.2",
+    "react-native-camera": "^3.36.0",
+    "react-native-element": "^1.2.1",
+    "react-native-elements": "^2.2.1",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-navbar": "^2.1.0",
-    "react-native-router-flux": "^4.0.0-beta.24",
-    "react-native-sound": "^0.10.4",
-    "react-native-vector-icons": "^4.4.3",
-    "simple-line-icons": "^2.4.1"
+    "react-native-reanimated": "^1.13.0",
+    "react-native-router-flux": "^4.2.0",
+    "react-native-screen": "^1.0.1",
+    "react-native-screens": "^2.10.1",
+    "react-native-sound": "^0.11.0",
+    "react-native-vector-icons": "^7.0.0",
+    "simple-line-icons": "^2.5.5"
   },
   "devDependencies": {
-    "babel-jest": "22.0.4",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.0.4",
-    "react-test-renderer": "16.0.0"
+    "@babel/core": "^7.11.1",
+    "@babel/runtime": "^7.11.2",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.7.0",
+    "jest": "^26.4.0",
+    "metro-react-native-babel-preset": "^0.62.0",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
