work before add item

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "react-native run-android --no-jetifier",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -11,17 +11,19 @@
   },
   "dependencies": {
     "@react-native-community/cookies": "^4.0.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@sentry/react-native": "^1.7.2",
+    "axios": "^0.20.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-camera": "^3.36.0",
     "react-native-element": "^1.2.1",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-navbar": "^2.1.0",
     "react-native-reanimated": "^1.13.0",
-    "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^3.1.6",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^2.10.1",
     "react-native-sound": "^0.11.0",
